# clockery

./: Cargo.toml  Makefile  README.md  build.rs  build_linux.md  config.example.json  config.json  main.py  pyproject.toml
.github/workflows/: rust.yaml
src/: __init__.py  clock.py  clock.rs  main.rs  snow.rs
src/tests/: clock_thing.py
