[package]
name = "opengl_clockery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitflags = "2.4.1" ./lol.pngT
chrono = "0.4.31"
chrono-tz = "0.8.4"
sdl2 = { version = "0.36.0", features = ["use-pkgconfig", "ttf"], default-features = false }
serde_json = "1.0.108"
slicestring = "0.3.3"

[profile.release]
opt-level = 3
