[package]
name = "opengl_clockery"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitflags = "2.4.1" ./lol.png
chrono = "0.4.31"
chrono-tz = "0.8.4"
clap = { version = "4.4.11", features = ["derive"] }
ctrlc = "3.4.2"
rand = "0.8.5"
serde_json = "1.0.108"
slicestring = "0.3.3"

[target.'cfg(target_os = "windows")'.dependencies]
sdl2 = { version = "0.36.0", features = ["use-vcpkg", "ttf", "static-link"], default-features = false }
winapi = { version = "0.3.9", features = ["winuser", "wincon"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
sdl2 = { version = "0.36.0", features = ["use-pkgconfig", "ttf"], default-features = false } #2

[profile.release]
opt-level = 3
debug = false

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-ttf", "sdl2-image[libjpeg-turbo,tiff,libwebp]"]
git = "https://github.com/microsoft/vcpkg"
rev = "c8696863d371ab7f46e213d8f5ca923c4aef2a00"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }
x86_64-unknown-linux-gnu = { triplet = "x64-linux" }
