[tool.poetry]
name = "clockery"
version = "0.1.0"
description = "A python clock that show time differences in timezones"
authors = ["timelessnesses <timelessnesses@timelessnesses.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2023.3.post1"
pillow = "^10.1.0"
pygame-ce = {version = "^2.4.0.dev2", allow-prereleases = true} # allowing me to have minimum screen size without hassles
pyopengl = "^3.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
